bonus/confs/gitlab-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
  namespace: gitlab
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gitlab.local`)
      priority: 10
      services:
        - name: gitlab-webservice-default
          port: 8080
  tls:
    certResolver: default
